[gd_scene load_steps=12 format=3 uid="uid://bqd4kpf8k5lv0"]

[ext_resource type="PackedScene" uid="uid://bqd4kpf8k5lv1" path="res://scenes/player/Player3D_Modular.tscn" id="1_player3d_scene"]
[ext_resource type="PackedScene" uid="uid://cak2m4n8p6q7r" path="res://scenes/ball/Ball3D_Simple.tscn" id="2_ball3d_scene"]
[ext_resource type="Script" uid="uid://b88fi8n4bcjy7" path="res://scripts/game_3d/camera_controller_simple.gd" id="3_camera_script"]
[ext_resource type="Script" uid="uid://dbi2cub4t7eg1" path="res://scripts/game_3d/training_mode_logic_simple.gd" id="4_training_logic"]
[ext_resource type="Script" path="res://test_kick_system.gd" id="5_test_script"]

[sub_resource type="Environment" id="Environment_3d"]
ambient_light_source = 3
ambient_light_color = Color(0.521569, 0.521569, 0.521569, 1)
ambient_light_energy = 0.5
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_field"]
size = Vector2(40, 25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_field"]
albedo_color = Color(0.1, 0.5, 0.1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_field"]
size = Vector3(40, 0.1, 25)

[sub_resource type="BoxShape3D" id="BoxShape3D_goal"]
size = Vector3(2, 2.5, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_goal"]
albedo_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall"]
size = Vector3(3, 10, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall_side"]
size = Vector3(46, 10, 3)

[node name="TrainingModeSimple" type="Node3D"]
script = ExtResource("4_training_logic")
player_node_path = NodePath("Players/Player1")
ball_node_path = NodePath("BallContainer/Ball")

[node name="TestKickSystem" type="Node" parent="."]
script = ExtResource("5_test_script")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 0)
shadow_enabled = true
directional_shadow_max_distance = 200.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3d")

[node name="Field" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="FieldMesh" type="MeshInstance3D" parent="Field"]
mesh = SubResource("PlaneMesh_field")
surface_material_override/0 = SubResource("StandardMaterial3D_field")

[node name="FieldCollision" type="CollisionShape3D" parent="Field"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
shape = SubResource("BoxShape3D_field")

[node name="Players" type="Node3D" parent="."]

[node name="Player1" parent="Players" instance=ExtResource("1_player3d_scene")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3)

[node name="BallContainer" type="Node3D" parent="."]

[node name="Ball" parent="BallContainer" instance=ExtResource("2_ball3d_scene")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0)

[node name="GameCamera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target_path")]
transform = Transform3D(1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 0, 20, 15)
fov = 60.0
script = ExtResource("3_camera_script")
target_path = NodePath("Players/Player1")
follow_offset = Vector3(0, 8, 12)
look_ahead_offset = Vector3(0, 2, 0)
position_smoothness = 8.0
rotation_smoothness = 12.0
max_follow_distance = 25.0
min_follow_distance = 8.0
dynamic_offset = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Training Mode - Goals: 0
WASD: Move, Space: Jump, F: Kick
R: Reset Ball"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Goal1_Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, -8)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="Goal1_CollisionShape3D" type="CollisionShape3D" parent="Goal1_Area3D"]
shape = SubResource("BoxShape3D_goal")

[node name="GoalPlaceholder1" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -7.5)
size = Vector3(8, 2.5, 1)
material = SubResource("StandardMaterial3D_goal")

[node name="InvisibleWalls" type="Node3D" parent="."]

[node name="WallLeft" type="StaticBody3D" parent="InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 5, 0)
collision_layer = 8
collision_mask = 0

[node name="WallLeftCollision" type="CollisionShape3D" parent="InvisibleWalls/WallLeft"]
shape = SubResource("BoxShape3D_wall")

[node name="WallRight" type="StaticBody3D" parent="InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 5, 0)
collision_layer = 8
collision_mask = 0

[node name="WallRightCollision" type="CollisionShape3D" parent="InvisibleWalls/WallRight"]
shape = SubResource("BoxShape3D_wall")

[node name="WallBack" type="StaticBody3D" parent="InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -14)
collision_layer = 8
collision_mask = 0

[node name="WallBackCollision" type="CollisionShape3D" parent="InvisibleWalls/WallBack"]
shape = SubResource("BoxShape3D_wall_side")

[node name="WallFront" type="StaticBody3D" parent="InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 14)
collision_layer = 8
collision_mask = 0

[node name="WallFrontCollision" type="CollisionShape3D" parent="InvisibleWalls/WallFront"]
shape = SubResource("BoxShape3D_wall_side")
